32 bit DFG should handle logicalNot slow case instead of simply bailing out https://bugs.webkit.org/show_bug.cgi?id=73515

Reviewed by Filip Pizlo.

This improves Kraken performance by 14%, mainly due to ~3X improvement
on imaging-desaturate.

* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::compileLogicalNot):


Canonical link: https://commits.webkit.org/90070@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101598 268f45cc-cd09-0410-ab3c-d52691b4dbfc